# find_steam_game

./: .gitignore  LICENSE  README.md  find_steam_game.h
.github/workflows/: cmake.yml
samples/: CMakeLists.txt  simple.c
